--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ edlib_rs = { path = "../edlib-rs" }  # 指定本地路径
 num_cpus = "1.16"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+fastq = "0.6.0"
+ahash = "0.8"
